<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice" />


        <Button
            android:id="@+id/botones"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_boton" />


        <Button
            android:id="@+id/listas"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_listas" />

        <Button
            android:id="@+id/check"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_checkbox" />


        <Button
            android:id="@+id/radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_radio" />
    </LinearLayout>

</RelativeLayout>
